# telegram-user-bot

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.yml  pyproject.toml
.github/workflows/: release-package.yml
telegram-user-bot/config/: __init__.py
telegram_user_bot/: __main__.py
telegram_user_bot/config/: __init__.py
telegram_user_bot/handlers/: __init__.py  messages.py
telegram_user_bot/middlewares/: value.py
telegram_user_bot/utils/: log.py  status.py
