[tool.poetry]
name = "telegram-user-bot"
version = "0.1"
description = "Telegram user bot integration for Suvvy AI"
authors = ["sushka <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
suvvyapi = "^0.1a7"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pydantic = "^2.5.2"
loguru = "^0.7.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
