[tool.poetry]
name = "telegram-user-bot"
version = "0.6"
description = "Telegram user bot integration for Suvvy AI"
authors = ["sushka <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pydantic = "^2.5.2"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
suvvyapi = "2.0a3"

[tool.poetry.scripts]
suvvyuser = "telegram_user_bot.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = "attr-defined"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
